--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Page Title</title>
+  <title>Revent</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your CSS file -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Your content goes here -->
   
-  <script src="script.js"></script> <!-- Optional: Link to your JavaScript file -->
+  
+  <script src="script.js"></script>
 </body>
 </html>
